@@ -1,3 +1,9 @@
+2001-07-13  Hans Petter Jansson  <hpj@ximian.com>
+
+	* xml.pl.in (xst_xml_model_add): Implement.
+	  (xst_xml_model_ensure): Implement.
+		(xst_xml_model_remove): Implement.
+
 2001-07-13  Tambet Ingo  <tambet@ximian.com>
 
 	* display-conf.in (check_version): Implement. Check version
